examples/test/testpolicy6121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6121
  namespace: namespace455
spec:
  podSelector:
    matchLabels:
      key25: value0
      key41: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value18
          key30: value10
          key26: value39
      podSelector:
        matchLabels:
          key17: value46
          key33: value42
          key29: value7
